@@ -1,3 +1,11 @@
+2013-02-08  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/regc_nfa.c (duptraverse): [Bug 3603557]: Increase the
+	maximum depth of recursion used when duplicating an automaton in
+	response to encountering a "wild" RE that hit the previous limit.
+	Allow the limit (DUPTRAVERSE_MAX_DEPTH) to be set by defining its
+	value in the Makefile. Problem reported by Jonathan Mills.
+
 2013-02-05  Don Porter  <dgp@users.sourceforge.net>
 
 	* win/tclWinFile.c:	[Bug 3603434] Make sure TclpObjNormalizePath() 
